# simprint-runtime

./: .gitignore  README.md  install.sh  install_all.sh  simprint_mcp_server.py  software_index.md  start.sh
extensions/bypass-paywalls-chrome-clean-master/: README.html  README.md  background.js  changelog.txt  contentScript.js  contentScript_once.js  manifest.json  sites.js  sites_updated.json  updates.xml
extensions/bypass-paywalls-chrome-clean-master/cs_local/: contentScript_de.js  contentScript_en.js  contentScript_es.pt.js  contentScript_fr.js  contentScript_it.js  contentScript_nl.js  contentScript_pl.js
extensions/bypass-paywalls-chrome-clean-master/custom/: manifest.json  sites_custom.json
extensions/bypass-paywalls-chrome-clean-master/custom/mv2/: manifest.json
extensions/bypass-paywalls-chrome-clean-master/options/: htmlviewer.js  options.html  options_custom.js
runtime/: simprint-runtime
scripts/: news_hourly.py
src-rust/: Cargo.toml  browser.rs  fingerprint.rs  main.rs
src-rust/cdp_client/: client.rs  mod.rs  types.rs
src-rust/protocol/: api.rs  mod.rs  topics.rs
