[package]
name = "simprint-runtime-linux"
version = "0.1.0"
description = "Simprint Runtime for Linux - Browser automation with fingerprint management"
authors = ["Simprint Team"]
edition = "2024"

[[bin]]
name = "simprint-runtime"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.3"
bytes = "1.10"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
uuid = { version = "1.18", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
rand = "0.9"
once_cell = "1.20"
parking_lot = "0.12"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Process management
sysinfo = "0.34"

# CDP client
fantoccini = "0.21"

# Browser management
which = "7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true